--- a/src/components/Home/Header/Header.css
+++ b/src/components/Home/Header/Header.css
@@ -43,10 +43,11 @@ header h2{
 	display: inline-block;
 }
 #menu li a {
+	text-decoration: none;
 	font-size: 17px;
 	line-height: 1;
 	color: #ffffff;
-	padding: 13px 20px;
+	/* padding: 13px 20px; */
 	font-weight: 700;
 	letter-spacing: 0;
 	border-bottom: 3px solid transparent;
